# myfirstrobot_description

./: CMakeLists.txt  README.md  TODO.md  package.xml
config/: myfirstrobot.rviz
launch/: display.launch.yaml  load_description.launch  load_robot.launch.yaml
rviz/: myfirstrobot.rviz
urdf/: myfirstrobot.urdf  myfirstrobot.urdf.xacro  myfirstrobot_visual.urdf
urdf/macros/: link_geometry.urdf.xacro  link_igv.urdf.xacro  properties.urdf.xacro
urdf/macros/parts/: base.urdf.xacro  head.urdf.xacro  leg.urdf.xacro  wheel.urdf.xacro
urdf/simulation/: gazebo_base.urdf.xacro  gazebo_camera.urdf.xacro  gazebo_laser.urdf.xacro
